added patients page

--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
         <i class="fas fa-clinic-medical"></i>
         <a href>Home</a>
         <i class="fas fa-user-md"></i>
-        <a href>Patients</a> 
+        <a href='./pages/patients.html'>Patients</a> 
         <i class="fas fa-notes-medical"></i>
         <a href>Reports</a>
         <i class="fas fa-hospital"></i>
