added appointment search page, added patient search form, added nav links to form

--- a/appointmentsSearch.html
+++ b/appointmentsSearch.html
@@ -52,7 +52,7 @@
           <ul id="treeView">
             <li>My Appointments
                 <ul>
-                    <li><a href="appointmentsSearch.html">Appointment Search</a> </li>
+                    <li>Appointment Search</li>
                       <ul> 
                         <li>Appointment Detail</li>
                      </ul>
@@ -72,8 +72,14 @@
             <nav class="crumbs">
                 <ul>
                     <li class="crumb"><a href="main.html">Home</a></li>
+                    <li class="crumb"><a href="appointmentsSearch.html">Appointment Search</a></li>
                 </ul>
             </nav>
+            <div class="apt-search">
+                <div id="validation-success"></div>
+
+                <form id="exampleform"></form>
+           </div>
             <div id="grid"></div>
        </div>
     </div>
