added detail page and links

--- a/appointmentSearch.html
+++ b/appointmentSearch.html
@@ -52,11 +52,8 @@
           <ul id="treeView">
             <li>My Appointments
                 <ul>
-                    <li>Appointment Search</li>
-                      <ul> 
-                        <li>Appointment Detail</li>
-                     </ul>
-                   
+                    <li><a href="appointmentSearch.html">Appointment Search</a> </li>
+                    <li><a href="appointmentDetail.html">Appointment Detail</a> </li>
                 </ul>
             </li>
           
@@ -72,7 +69,7 @@
             <nav class="crumbs">
                 <ul>
                     <li class="crumb"><a href="main.html">Home</a></li>
-                    <li class="crumb"><a href="appointmentsSearch.html">Appointment Search</a></li>
+                    <li class="crumb"><a href="appointmentSearch.html">Appointment Search</a></li>
                 </ul>
             </nav>
             <div class="apt-search">
