added patient search page, added home page, added search styling to appointments

--- a/appointmentSearch.html
+++ b/appointmentSearch.html
@@ -21,7 +21,6 @@
     <script src="https://kendo.cdn.telerik.com/2021.1.330/js/kendo.all.min.js"></script>
     
 <link rel="stylesheet" href="/css/skeleton.css">
-<link rel="stylesheet" href="css/custom.css">
 <link rel="stylesheet" href="css/mystyle.css">
 <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2021.1.330/styles/kendo.common.min.css">
 <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2021.1.330/styles/kendo.rtl.min.css">
@@ -39,7 +38,9 @@
     </header>
     <nav class="nav">
         <i class="fas fa-clinic-medical"></i>
-        <a href='main.html'>Home</a>
+        <a href='home.html'>Home</a>
+        <i class="fas fa-user-md"></i>
+        <a href='appointments.html'>Appointments</a>
         <i class="fas fa-user-md"></i>
         <a href='patients.html'>Patients</a> 
         <i class="fas fa-notes-medical"></i>
@@ -68,13 +69,21 @@
         <div id="main">
             <nav class="crumbs">
                 <ul>
-                    <li class="crumb"><a href="main.html">Home</a></li>
+                    <li class="crumb"><a href="home.html">Appointments</a></li>
                     <li class="crumb"><a href="appointmentSearch.html">Appointment Search</a></li>
                 </ul>
             </nav>
             <div class="apt-search">
-                <div id="validation-success"></div>
-                <form id="exampleform"></form>
+                <div id="validation-success">
+                </div>
+                    <div class="example-form">
+                        <form id="exampleform">
+                            <button>Search</button>
+                            <button>Add Filter</button>
+                            <button>Clear</button>
+                            <button>New Appointment</button>
+                        </form>
+                    </div>
            </div>
             <div id="grid"></div>
        </div>
