--- a/appointments.html
+++ b/appointments.html
@@ -39,7 +39,9 @@
     </header>
     <nav class="nav">
         <i class="fas fa-clinic-medical"></i>
-        <a href='main.html'>Home</a>
+        <a href='home.html'>Home</a>
+        <i class="fas fa-user-md"></i>
+        <a href='appointments.html'>Appointments</a>
         <i class="fas fa-user-md"></i>
         <a href='patients.html'>Patients</a> 
         <i class="fas fa-notes-medical"></i>
@@ -71,7 +73,7 @@
         <div id="main">
             <nav class="crumbs">
                 <ul>
-                    <li class="crumb"><a href="main.html">Home</a></li>
+                    <li class="crumb"><a href="main.html">Appointments</a></li>
                 </ul>
             </nav>
             <div id="grid"></div>
