added patient info to Patient Detail Section, added grid function as well

--- a/patientDetail.html
+++ b/patientDetail.html
@@ -77,7 +77,7 @@
                 <div id="validation-success">
                 </div>
                     <div class="example-form">
-                        <form id="exampleform">
+                        <form id="exampleform4">
                             <button>Search</button>
                             <button>Add Filter</button>
                             <button>Clear</button>
@@ -85,7 +85,7 @@
                         </form>
                     </div>
            </div>
-            <div id="grid"></div>
+            <div id="grid2"></div>
        </div>
     </div>
       
