added patient detail section

--- a/patientDetail.html
+++ b/patientDetail.html
@@ -78,10 +78,10 @@
                 </div>
                     <div class="example-form">
                         <form id="exampleform4">
-                            <button>Search</button>
-                            <button>Add Filter</button>
-                            <button>Clear</button>
-                            <button>New Appointment</button>
+                            <button>New</button>
+                            <button>Save</button>
+                            <button>Cancel</button>
+                            <button>Delete</button>
                         </form>
                     </div>
            </div>
