--- a/patients.html
+++ b/patients.html
@@ -81,10 +81,10 @@
                 </div>
                     <div class="example-form">
                         <form id="exampleform3">
-                            <button>Search</button>
+                            <!-- <button>Search</button>
                             <button>Add Filter</button>
                             <button>Clear</button>
-                            <button>New Appointment</button>
+                            <button>New Appointment</button> -->
                         </form>
                     </div>
            </div>
