--- a/patients.html
+++ b/patients.html
@@ -88,7 +88,7 @@
                         </form>
                     </div>
            </div>
-            <div id="grid"></div>
+            <div id="grid2"></div>
        </div>
     </div>
       
