--- a/appointmentSearch.html
+++ b/appointmentSearch.html
@@ -38,7 +38,7 @@
     </header>
     <nav class="nav">
         <i class="fas fa-clinic-medical"></i>
-        <a href='home.html'>Home</a>
+        <a href='index.html'>Home</a>
         <i class="fas fa-user-md"></i>
         <a href='appointments.html'>Appointments</a>
         <i class="fas fa-user-md"></i>
@@ -69,7 +69,7 @@
         <div id="main">
             <nav class="crumbs">
                 <ul>
-                    <li class="crumb"><a href="home.html">Appointments</a></li>
+                    <li class="crumb"><a href="index.html">Appointments</a></li>
                     <li class="crumb"><a href="appointmentSearch.html">Appointment Search</a></li>
                 </ul>
             </nav>
