--- a/patients.html
+++ b/patients.html
@@ -39,7 +39,7 @@
     </header>
     <nav class="nav">
         <i class="fas fa-clinic-medical"></i>
-        <a href='home.html'>Home</a>
+        <a href='index.html'>Home</a>
         <i class="fas fa-user-md"></i>
         <a href='appointments.html'>Appointments</a>
         <i class="fas fa-user-md"></i>
