added reports.html, added stying and NAV link to Reports and Admin page

--- a/appointments.html
+++ b/appointments.html
@@ -45,9 +45,9 @@
         <i class="fas fa-user-md"></i>
         <a href='patients.html'>Patients</a> 
         <i class="fas fa-notes-medical"></i>
-        <a href>Reports</a>
+        <a href="reports.html">Reports</a>
         <i class="fas fa-hospital"></i>
-        <a href>Administration</a>
+        <a href="administration.html">Administration</a>
     </nav>
     <div class="main-container">
         <div class="sidebar">
