--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
     </header>
     <nav class="nav">
         <i class="fas fa-clinic-medical"></i>
-        <a href='home.html'>Home</a>
+        <a href='index.html'>Home</a>
         <i class="fas fa-user-md"></i>
         <a href='appointments.html'>Appointments</a>
         <i class="fas fa-user-md"></i>
         <a href='patients.html'>Patients</a> 
         <i class="fas fa-notes-medical"></i>
-        <a href>Reports</a>
+        <a href="reports.html">Reports</a>
         <i class="fas fa-hospital"></i>
-        <a href>Administration</a>
+        <a href="administration.html">Administration</a>
     </nav>
     <div class="main-container">
         <div class="sidebar">
