added amdmin page, added dr search page

--- a/doctorSearch.html
+++ b/doctorSearch.html
@@ -54,7 +54,7 @@
                 <li>Administration
                     <ul>
                         
-                        <li><a href="administration.html">Doctor Search</a> </li> 
+                        <li><a href="doctorSearch.html">Doctor Search</a> </li> 
                             <ul>
                                 <a href="administration.html">Doctor Detail</a> 
                             </ul>
