--- a/appointments.html
+++ b/appointments.html
@@ -73,7 +73,7 @@
         <div id="main">
             <nav class="crumbs">
                 <ul>
-                    <li class="crumb"><a href="main.html">Appointments</a></li>
+                    <li class="crumb"><a href="index.html">Appointments</a></li>
                 </ul>
             </nav>
             <div id="grid"></div>
