added dr Detail link to treeview

--- a/doctorSearch.html
+++ b/doctorSearch.html
@@ -56,7 +56,7 @@
                         
                         <li><a href="doctorSearch.html">Doctor Search</a> </li> 
                             <ul>
-                                <a href="administration.html">Doctor Detail</a> 
+                                <a href="doctorDetail.html">Doctor Detail</a> 
                             </ul>
                         <li><a href="administration.html">Add Specialties</a> </li> 
                         <li><a href="administration.html">Add Medication</a> </li>     
