--- a/doctorSearch.html
+++ b/doctorSearch.html
@@ -58,7 +58,7 @@
                             <ul>
                                 <a href="doctorDetail.html">Doctor Detail</a> 
                             </ul>
-                        <li><a href="administration.html">Add Specialties</a> </li> 
+                        <li><a href="addSpecialties.html">Add Specialties</a> </li> 
                         <li><a href="administration.html">Add Medication</a> </li>     
                     </ul>
                 </li>
