changed treeview, updated link on all pages

--- a/addSpecialties.html
+++ b/addSpecialties.html
@@ -35,7 +35,7 @@
 <body>
     <script src="https://kendo.cdn.telerik.com/2021.1.330/js/jszip.min.js"></script>
     <header class="header">
-        <h2>Welcome to Carepoint</h2>
+        <h2>Welcome to CarePoint</h2>
     </header>
     <nav class="nav">
         <i class="fas fa-clinic-medical"></i>
