--- a/reports.html
+++ b/reports.html
@@ -22,7 +22,7 @@
 <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2021.1.330/styles/kendo.default.min.css">
 <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2021.1.330/styles/kendo.mobile.all.min.css">
 <link rel="stylesheet" href="/css/normalize.css">
- <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2021.1.330/styles/kendo.bootstrap-v4.min.css" />
+ <!-- <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2021.1.330/styles/kendo.bootstrap-v4.min.css" /> -->
  <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300&display=swap" rel="stylesheet">
 <script src="https://kendo.cdn.telerik.com/2021.1.330/js/angular.min.js"></script>
@@ -35,15 +35,17 @@
     </header>
     <nav class="nav">
         <i class="fas fa-clinic-medical"></i>
-        <a href='index.html'>Home</a>
+        <a class="nav1" href='index.html'>Home</a>
         <i class="fas fa-user-md"></i>
-        <a href='appointments.html'>Appointments</a>
+        <a class="nav1" href='appointments.html'>Appointments</a>
         <i class="fas fa-user-md"></i>
-        <a href='patients.html'>Patients</a> 
+        <a class="nav1" href='patients.html'>Patients</a> 
         <i class="fas fa-notes-medical"></i>
-        <a href="reports.html">Reports</a>
+        <a class="nav1" href="reports.html">Reports</a>
         <i class="fas fa-hospital"></i>
-        <a href="administration.html">Administration</a>
+        <a class="nav1" href="administration.html">Administration</a>
+
+        <a id="login" class="nav1" href="Log in">Log In</a>
     </nav>
     <div class="main-container">
         <div class="sidebar">
@@ -59,7 +61,7 @@
             </ul> 
         </div>
        <div id="main">
-            <h1>This page is currently under maintenance.</h1>
+            <h1 class="reports">This page is currently under maintenance.</h1>
         </div>
        </div>
     </div>
