added FadeIn and css grid to home page

--- a/doctorDetail.html
+++ b/doctorDetail.html
@@ -54,9 +54,7 @@
                     <ul>
                         
                         <li><a href="doctorSearch.html">Doctor Search</a> </li> 
-                            <ul>
-                                <a href="doctorDetail.html">Doctor Detail</a> 
-                            </ul>
+                        <li>  <a href="doctorDetail.html">Doctor Detail</a> </li>  
                         <li><a href="addSpecialties.html">Add Specialties</a> </li> 
                         <li><a href="administration.html">Add Medication</a> </li>     
                     </ul>
