removed search form from apt-search

--- a/appointmentSearch.html
+++ b/appointmentSearch.html
@@ -75,14 +75,14 @@
             <div class="apt-search">
                 <div id="validation-success">
                 </div>
-                    <div class="example-form">
+                    <!-- <div class="example-form">
                         <form id="exampleform">
                             <button>Search</button>
                             <button>Add Filter</button>
                             <button>Clear</button>
                             <button>New Appointment</button>
                         </form>
-                    </div>
+                    </div> -->
            </div>
             <div id="grid"></div>
        </div>
