removed search form

--- a/appointmentSearch.html
+++ b/appointmentSearch.html
@@ -72,19 +72,20 @@
                     <li class="crumb"><a href="appointmentSearch.html">Appointment Search</a></li>
                 </ul>
             </nav>
-            <div class="apt-search">
-                <div id="validation-success">
-                </div>
+            <!-- <div class="apt-search"> -->
+                <!-- <div id="validation-success">
+                </div> -->
                     <!-- <div class="example-form">
                         <form id="exampleform">
                             <button>Search</button>
                             <button>Add Filter</button>
                             <button>Clear</button>
                             <button>New Appointment</button>
-                        </form>
+                        </form> 
                     </div> -->
+                    <div id="grid"></div>
            </div>
-            <div id="grid"></div>
+           
        </div>
     </div>
       
