added back end for app grid

--- a/appointments.html
+++ b/appointments.html
@@ -27,7 +27,7 @@
  <!-- <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2021.1.330/styles/kendo.bootstrap-v4.min.css" /> -->
  <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300&display=swap" rel="stylesheet">
-<script src="https://kendo.cdn.telerik.com/2021.1.330/js/angular.min.js"></script>
+<!-- <script src="https://kendo.cdn.telerik.com/2021.1.330/js/angular.min.js"></script> -->
 <script src="https://kendo.cdn.telerik.com/2021.2.616/js/kendo.all.min.js"></script>    
  
 </head>
@@ -74,7 +74,7 @@
                 </ul>
             </nav>
             
-            <div id="grid99"></div> 
+            <div id="grid98"></div> 
        </div>
     </div>
       
