--- a/test.html
+++ b/test.html
@@ -88,7 +88,7 @@
                                 doctor: { type: "string" },
                                 time: { type: "string" },
                                 date: { type: "string" },
-                                identification: { type: "string" }
+                                id: { type: "string" }
                             }
                         }
                     },
@@ -107,7 +107,7 @@
                     { field: "doctor", title: "Doctor", format: "{0:c}", width: "130px"},
                     { field: "time", title: "Time", width: "130px" },
                     { field: "date", title: "Date", width: "130px" },
-                    { field: "identification", title: "ID", width: "130px"}, 
+                    { field: "id", title: "ID", width: "130px"}, 
                     { command: ["edit", "destroy"], title: "&nbsp;", width: "150px" }
                 ],
                 editable: "inline"
