added styling to grid, removed form from Apt Search, updated Grid for Apt and Apt search pages, removed create filter from apt page

--- a/appointmentSearch.html
+++ b/appointmentSearch.html
@@ -68,7 +68,7 @@
         <div id="main">
             <nav class="crumbs">
                 <ul>
-                    <li class="crumb"><a href="index.html">Appointments</a></li>
+                    <li class="crumb"><a href="appointments.html">Appointments</a></li>
                     <li class="crumb"><a href="appointmentSearch.html">Appointment Search</a></li>
                 </ul>
             </nav>
