added test.html, test.js, added patient.json, added diaglog box to grid on test.html

--- a/patientDetail.html
+++ b/patientDetail.html
@@ -73,19 +73,21 @@
                     <li class="crumb"><a href="patients.html">Patient Search</a></li>
                     <li class="crumb"><a href="patientDetail.html">Patient Detail</a></li>
                 </ul>
-            </nav>
+            </nav> 
+            <h2 style="text-align: center;">PATIENT DETAIL</h2>
             <div class="apt-search">
                 <div id="validation-success">
                 </div>
                     <div class="example-form">
                         <form id="exampleform4">
-                            <button>New</button>
+                            <!-- <button>New</button>
                             <button>Save</button>
                             <button>Cancel</button>
-                            <button>Delete</button>
+                            <button>Delete</button> -->
                         </form>
                     </div>
            </div>
+          
            <div id="tabstrip">
             <ul>
                 <li class="k-state-active">
