--- a/patients.html
+++ b/patients.html
@@ -75,7 +75,7 @@
                     <li class="crumb"><a href="main.html">Patient Search</a></li>
                 </ul>
             </nav>
-            <div class="apt-search">
+            <!-- <div class="apt-search">
                 <div id="validation-success">
                 </div>
                     <div class="example-form">
@@ -86,7 +86,8 @@
                             <button>New Appointment</button>
                         </form>
                     </div>
-           </div>
+           </div> -->
+           <h2 style="text-align: center;">PATIENT SEARCH</h2>
             <div id="grid2"></div>
        </div>
     </div>
