added filter to grid 9 and grid 10

--- a/test.html
+++ b/test.html
@@ -74,9 +74,13 @@
                     <li class="crumb"><a href="index.html">Appointments</a></li>
                 </ul>
             </nav>
+            
             <div id="dialog">
+                Content of the Dialog
             </div>
-    
+            <button id="openButton">Open Dialog</button>
+
+
             <div id="testGrid"></div> 
             <button class="testButton">Hello</button>
  
