added medical logo to page

--- a/test.html
+++ b/test.html
@@ -75,14 +75,13 @@
                 </ul>
             </nav>
             
-            <div id="dialog">
-                Content of the Dialog
-            </div>
-            <button id="openButton">Open Dialog</button>
-
+            <div id="example">
+                <!-- <div id="dialog">
+                </div>
+                <span id="undo" style="display:none" class="k-button hide-on-narrow">Click here to open the dialog</span> -->
 
             <div id="testGrid"></div> 
-            <button class="testButton">Hello</button>
+        
  
        </div>
     </div>
