--- a/appointments.html
+++ b/appointments.html
@@ -6,6 +6,7 @@
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
         crossorigin="anonymous"></script>
     <script src="./main.js"></script>
+    <link rel="shortcut icon" href="./MedicalLogo.png" type="image/x-icon">
     <!-- <script src="./people.js"></script> -->
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
