removed Log in link href

--- a/doctorDetail.html
+++ b/doctorDetail.html
@@ -46,7 +46,7 @@
         <i class="fas fa-hospital"></i>
         <a class="nav1" href="administration.html">Administration</a>
 
-        <a id="login" class="nav1" href="Log in">Log In</a>
+        <a id="login" class="nav1" >Log In</a>
     </nav>
      <div class="main-container">
         <div class="sidebar">
