added kendo diaglog to #grid, added login to home page

--- a/appointmentSearch.html
+++ b/appointmentSearch.html
@@ -84,6 +84,11 @@
                             <button>New Appointment</button>
                         </form> 
                     </div> -->
+
+                    <div id="dialog">
+                        Content of the Dialog
+                    </div>
+                    
                     <div id="grid"></div>
            </div>
            
