removed commented out code, added some CSS to login modal

--- a/appointmentSearch.html
+++ b/appointmentSearch.html
@@ -60,11 +60,6 @@
           
         </ul> 
         
-        <!-- <script>
-        $(document).ready(function() {
-            $("#treeView").kendoTreeView();
-        });
-        </script> -->
         </div>
         <div id="main">
             <nav class="crumbs">
@@ -73,17 +68,7 @@
                     <li class="crumb"><a href="appointmentSearch.html">Appointment Search</a></li>
                 </ul>
             </nav>
-            <!-- <div class="apt-search"> -->
-                <!-- <div id="validation-success">
-                </div> -->
-                    <!-- <div class="example-form">
-                        <form id="exampleform">
-                            <button>Search</button>
-                            <button>Add Filter</button>
-                            <button>Clear</button>
-                            <button>New Appointment</button>
-                        </form> 
-                    </div> -->
+                    <h1 style="text-align: center;">Appointment Search</h1>
 
                     <div id="dialog">
                         Content of the Dialog
