--- a/appointments.html
+++ b/appointments.html
@@ -74,7 +74,7 @@
                     <li class="crumb"><a href="index.html">Appointments</a></li>
                 </ul>
             </nav>
-        
+            <h1 style="text-align: center;">Appointments</h1>
             <div id="grid99"></div> 
        </div>
     </div>
