added h1 and css to appointment detail page

--- a/appointmentDetail.html
+++ b/appointmentDetail.html
@@ -65,6 +65,7 @@
             <nav class="crumbs">
                 <ul>
                     <li class="crumb"><a href="index.html">Appointments</a></li>
+                    <li class="crumb"><a href="appointmentSearch.html">Appointment Search</a></li>
                     <li class="crumb"><a href="appointmentDetail.html">Appointment Detail</a></li>
                 </ul>
             </nav>
@@ -75,7 +76,7 @@
                 
                 <div class="form2-style">
                 <form id="exampleform2">
-                <button>New</button><button>Save</button><button>Cancel</button><button>Delete</button>
+              <h1>Appointment Details</h1>
                 </form>
                 </div>
 
