--- a/appointments.html
+++ b/appointments.html
@@ -49,7 +49,7 @@
         <i class="fas fa-hospital"></i>
         <a class="nav1" href="administration.html">Administration</a>
 
-        <a id="login" class="nav1">Log In</a>
+        <!-- <a id="login" class="nav1">Log In</a> -->
     </nav>
     <div class="main-container">
         <div class="sidebar">
