--- a/reports.html
+++ b/reports.html
@@ -45,8 +45,8 @@
         <a class="nav1" href="reports.html">Reports</a>
         <i class="fas fa-hospital"></i>
         <a class="nav1" href="administration.html">Administration</a>
-
-        <a id="login" class="nav1" >Log In</a>
+<!-- 
+        <a id="login" class="nav1" >Log In</a> -->
     </nav>
     <div class="main-container">
         <div class="sidebar">
