added titles to Admin pages, removed forms

--- a/addSpecialties.html
+++ b/addSpecialties.html
@@ -69,7 +69,7 @@
                 <li class="crumb"><a href="addSpecialties.html">Add Specialties</a></li>
             </ul>
         </nav>
-    
+                <h1 style="text-align: center;">Add Specialties</h1>
         <div id="example">
             <div id="grid9"></div>
         </div>
