--- a/doctorSearch.html
+++ b/doctorSearch.html
@@ -69,14 +69,15 @@
                 <li class="crumb"><a href="doctorSearch.html">Doctor Search</a></li>
             </ul>
         </nav>
-        <div class="example-form">
+        <h1 style="text-align: center;">Doctor Search</h1>
+        <!-- <div class="example-form">
             <form id="exampleform5">
                 <button>Search</button>
                 <button>Add Filter</button>
                 <button>Clear</button>
                 <button>New Appointment</button>
             </form>
-        </div>
+        </div> -->
         <div id="example">
             <div id="grid6"></div>
         </div>
