--- a/patientDetail.html
+++ b/patientDetail.html
@@ -60,7 +60,7 @@
           <ul id="treeView">
             <li>Patient Search
                 <ul>
-                    <li><a href="appointmentDetail.html">Patient Deatil</a> </li>    
+                    <li><a href="appointmentDetail.html">Patient Detail</a> </li>    
                 </ul>
             </li>
           
