added dropdown menu to index.html, removed some footer links, added CSS to dropdown menu, fixed some broken links throughout the app

--- a/patientDetail.html
+++ b/patientDetail.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2021.1.330/styles/kendo.default.min.css">
 <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2021.1.330/styles/kendo.mobile.all.min.css">
 <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2021.1.330/styles/kendo.bootstrap-v4.min.css" />
+  <!-- <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2021.1.330/styles/kendo.bootstrap-v4.min.css" /> -->
  <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300&display=swap" rel="stylesheet">
 <script src="https://kendo.cdn.telerik.com/2021.1.330/js/angular.min.js"></script>
@@ -60,7 +60,7 @@
           <ul id="treeView">
             <li>Patient Search
                 <ul>
-                    <li><a href="appointmentDetail.html">Patient Detail</a> </li>    
+                    <li><a href="patientDetail.html">Patient Detail</a> </li>    
                 </ul>
             </li>
           
